# port-manager

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  start-tauri-dev.cmd  start-tauri-dev.ps1
.github/workflows/: ci.yml
apps/cli/: Cargo.toml
apps/cli/src/: main.rs
apps/cli/tests/: scan_ports.rs
apps/desktop/: index.html  package-lock.json  package.json  tsconfig.node.json  vite.config.ts
apps/desktop/src/: App.tsx  main.tsx  styles.css
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: desktop-window.json
apps/desktop/src-tauri/src/: main.rs
apps/desktop/src/components/: ScanCard.tsx  SelectMenu.tsx  StatusPill.tsx
apps/desktop/src/features/favorites/: FavoritesPage.tsx
apps/desktop/src/features/ports/: PortsPage.tsx
apps/desktop/src/features/services/: ServicesPage.tsx
apps/desktop/src/lib/: api.ts  dashboard.ts  mockBackend.ts  presentation.ts  screenshotMode.ts  types.ts
crates/adapters/runner/: Cargo.toml
crates/adapters/runner/src/: command_runner.rs  lib.rs  project_detector.rs
crates/adapters/sqlite/: Cargo.toml
crates/adapters/sqlite/src/: db.rs  favorite_repo.rs  lib.rs  managed_service_repo.rs  run_state_repo.rs
crates/adapters/sqlite/tests/: sqlite_repositories.rs
crates/adapters/windows/: Cargo.toml
crates/adapters/windows/src/: lib.rs  mapper.rs  port_provider.rs  process_controller.rs  service_controller.rs
crates/application/: Cargo.toml
crates/application/src/: dto.rs  errors.rs  lib.rs  service.rs
crates/application/tests/: dashboard.rs  favorites.rs  process_control.rs  service_management.rs
crates/application/tests/support/: mod.rs
crates/domain/: Cargo.toml
crates/domain/src/: favorite.rs  lib.rs  managed_service.rs  managed_service_run.rs  port_record.rs
crates/domain/tests/: entities.rs
crates/interfaces/cli_api/: Cargo.toml
crates/interfaces/cli_api/src/: cli.rs  commands.rs  lib.rs
crates/interfaces/tauri_api/: Cargo.toml
crates/interfaces/tauri_api/src/: commands.rs  lib.rs  state.rs
crates/ports/: Cargo.toml
crates/ports/src/: command_runner.rs  lib.rs  port_provider.rs  process_controller.rs  project_detector.rs  repositories.rs  service_controller.rs
