[workspace]
members = [
  "crates/domain",
  "crates/ports",
  "crates/application",
  "crates/adapters/sqlite",
  "crates/adapters/windows",
  "crates/adapters/runner",
  "crates/interfaces/cli_api",
  "crates/interfaces/tauri_api",
  "apps/cli",
]
resolver = "2"

[workspace.dependencies]
anyhow = "1"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["macros", "process", "rt-multi-thread", "time"] }
uuid = { version = "1", features = ["serde", "v4"] }
