[package]
name = "pm-adapters-sqlite"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
pm-domain = { path = "../../domain" }
pm-ports = { path = "../../ports" }
rusqlite = { version = "0.32", features = ["bundled"] }
serde_json.workspace = true
tokio.workspace = true
